# bhansa-generator-testova

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  file_utils.py  main.py  models.py  reader.py  ui.py  writer.py
tests/: test_reader.py  test_writer.py
tests/fixtures/: test-form.xlsm
tests/fixtures/baza/pitanja/ndo/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  8.docx
tests/fixtures/baza/pitanja/npo/: 1.docx  10.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  8.docx  9.docx
tests/fixtures/baza/pitanja/nto/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx
tests/fixtures/baza/predlosci/: template-naslovna.docx
