[project]
name = "generator-testova"
version = "0.1.0"
description = "Generator testova"
requires-python = ">=3.10"
dependencies = [
    "openpyxl",
    "python-docx",
    "spire.doc",
    "docxtpl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
